<resources>
    <string name="app_name">ByeSoon</string>
    <string name="title_activity_individual_post">IndividualPost</string>
    <string name="tab_text_1">Photos</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Stories</string>
    <string name="add_bison">Add Bison</string>
    <string name="bison_name">Bison Name</string>
    <string name="weight">Weight</string>
    <string name="speed">Speed</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="name_comments">Name</string>
    <string name="post_comment">post</string>
    <string name="add_comment_post">Add Comment</string>
    <string name="create_profile">Create Profile</string>
    <string name="name_prof">Name</string>
    <string name="bio_prof">Bio</string>
    <string name="email_prof">Email</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="name_img">Name</string>
    <string name="edit_img">Edit</string>
    <string name="delete_image">Delete Image</string>
    <string name="login">Login</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="notification">Notification</string>
    <string name="choose_any_file">choose any file</string>
    <string name="upload">UPLOAD</string>
    <string name="bison">Bison</string>
    <string name="adopt_bison">Adopt Bison</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="log_in">LOG IN</string>
    <string name="settings_activity">Settings</string>
    <string name="change_mode">Change mode</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="update_photo">Update photo</string>
    <string name="update_profile">Update Profile</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="time">Time</string>
    <string name="comment">Comment</string>
    <string name="likes">likes</string>
    <string name="create_post">Create Post</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="posts">Posts</string>
    <string name="new_notification">New</string>
    <string name="bisons">Bisons</string>
    <string name="add_post">Add Post</string>
    <string name="notification_text">notification text</string>
    <string name="comments">Comments</string>
    <string name="by">by -</string>
    <string name="profession">profession</string>
    <string name="view_profile">View Profile</string>
    <string name="profile">Profile</string>
    <string name="adopt">Adopt</string>
    <string name="home">Home</string>
    <string name="blik_code">Blik code</string>
    <string name="pay">Pay</string>
</resources>