<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activities.ProductDetailsActivity">

    <TextView
        android:id="@+id/tv_head_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/bison"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="180dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="2dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/iv_product_product"
            android:clickable="true"
            android:background="@drawable/ic_baseline_image_24"
            android:scaleType="fitCenter"/>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:id="@+id/tv_price_product"
                android:hint="@string/price"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:hint="@string/weight"
        android:id="@+id/tv_productCategory_product"
        android:layout_margin="4dp"
        android:drawablePadding="7dp"
        android:drawableLeft="@drawable/ic_baseline_category_24"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speed"
        android:textSize="15dp"
        android:id="@+id/tv_location_product"
        android:layout_margin="4dp"
        android:drawablePadding="7dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="15dp"
        android:id="@+id/tv_description_product"
        android:layout_margin="4dp"
        android:drawablePadding="7dp"
        android:drawableLeft="@drawable/ic_baseline_speaker_notes_24"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adopt_bison"
        android:layout_margin="10dp"
        android:background="@drawable/button_back"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_product"
        />

</LinearLayout>