<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".Activities.RegisterActivity">

    <ImageView
        android:layout_width="251dp"
        android:layout_height="201dp"
        android:src="@drawable/logo"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:hint="@string/email_prof"
        android:drawableStart="@drawable/custom_email_input"
        android:drawablePadding="10dp"
        android:background="@drawable/custom_input"
        android:textColorHint="@color/gg"
        android:id="@+id/register_email_ET"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newUP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/custom_pass_input"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_input"
            android:textColorHint="@color/gg"
            android:id="@+id/register_password_ET"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newUP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/custom_pass_input"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_input"
            android:textColorHint="@color/gg"
            android:id="@+id/register_confirm_password_ET"
            />

    </com.google.android.material.textfield.TextInputLayout>


<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="invisible">-->

<!--    <CheckBox-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Show Password"-->
<!--        android:buttonTint="@color/white"-->
<!--        android:textColor="@color/white"-->
<!--        android:layout_marginRight="40dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:id="@+id/register_checkbox"/>-->

<!--    </LinearLayout>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:id="@+id/register_BTN"/>

    <Button
        android:id="@+id/register_to_login_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_back"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="25sp" />

</LinearLayout>